@@ -1797,32 +1797,38 @@ SCIP_RETCODE execGenVBounds(
    /* we only sort after the root node is finished; this avoids having to sort again after adding more genvbounds; if
     * the genvbounds are not sorted, we will simply propagate all of them in the order given
     */
-   if( propdata->sort && !propdata->issorted && !SCIPinProbing(scip) && SCIPgetDepth(scip) > 0 )
+   if( propdata->sort && !SCIPinProbing(scip) && SCIPgetDepth(scip) > 0 )
    {
-      *result = SCIP_DIDNOTFIND;
+      if( !propdata->issorted )
+      {
+         *result = SCIP_DIDNOTFIND;
 
-      SCIPdebugMsg(scip, "genvbounds are not sorted\n");
+         SCIPdebugMsg(scip, "genvbounds are not sorted\n");
 
-      /* drop and free old events */
-      SCIP_CALL( dropAndFreeEvents(scip, propdata) );
+         /* drop and free old events */
+         SCIP_CALL( dropAndFreeEvents(scip, propdata) );
 
-      /* free old starting data */
-      SCIP_CALL( freeStartingData(scip, propdata) );
+         /* free old starting data */
+         SCIP_CALL( freeStartingData(scip, propdata) );
 
-      /* free sorted components data */
-      SCIP_CALL( freeComponentsData(scip, propdata) );
+         /* free sorted components data */
+         SCIP_CALL( freeComponentsData(scip, propdata) );
 
-      /* sort genvbounds */
-      SCIP_CALL( sortGenVBounds(scip, propdata) );
+         /* sort genvbounds */
+         SCIP_CALL( sortGenVBounds(scip, propdata) );
 
-      /* create starting data */
-      SCIP_CALL( createStartingData(scip, propdata) );
+         /* create starting data */
+         SCIP_CALL( createStartingData(scip, propdata) );
 
-      /* fill global starting data */
-      SCIP_CALL( fillGlobalStartingData(scip, propdata) );
+         /* fill global starting data */
+         SCIP_CALL( fillGlobalStartingData(scip, propdata) );
+      }
 
-      /* set up new events to catch */
-      SCIP_CALL( setUpEvents(scip, propdata) );
+      /* set up new events to catch (if not done so far) */
+      if( propdata->lbevents == NULL )
+      {
+         SCIP_CALL( setUpEvents(scip, propdata) );
+      }
    }
 
    /* apply global propagation if primal bound has improved */
@@ -2571,9 +2577,6 @@ SCIP_DECL_PROPEXITSOL(propExitsolGenvbounds)
       /* set the number of genvbounds to zero */
       propdata->ngenvbounds = 0;
 
-      /* drop and free all events */
-      SCIP_CALL( dropAndFreeEvents(scip, propdata) );
-
       /* free componentsstart array */
       SCIP_CALL( freeComponentsData(scip, propdata) );
 
@@ -2589,6 +2592,9 @@ SCIP_DECL_PROPEXITSOL(propExitsolGenvbounds)
       propdata->cutoffboundvar = NULL;
       SCIPdebugMsg(scip, "release cutoffboundvar!\n");
    }
+
+   /* drop and free all events */
+   SCIP_CALL( dropAndFreeEvents(scip, propdata) );
 
    return SCIP_OKAY;
 }
